--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tensorflow-models/body-pix": "^2.0.5",
+    "@tensorflow/tfjs": "^2.0.1",
+    "@tensorflow/tfjs-backend-webgl": "^2.0.1",
     "core-js": "^3.6.5",
+    "dat.gui": "^0.7.7",
     "register-service-worker": "^1.7.1",
+    "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
